added ft_printf to project

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,6 +1,7 @@
 NAME = libft.a
 
 SRC = ft_atoi.c \
+	  ft_atoi_addr.c \
 	  ft_bzero.c \
 	  ft_epur_str.c \
 	  ft_isalnum.c \
@@ -27,6 +28,7 @@ SRC = ft_atoi.c \
 	  ft_memdel.c \
 	  ft_memmove.c \
 	  ft_memset.c \
+	  ft_pow.c \
 	  ft_putchar.c \
 	  ft_putchar_fd.c \
 	  ft_putendl.c \
@@ -39,6 +41,7 @@ SRC = ft_atoi.c \
 	  ft_sqrt.c \
 	  ft_strcat.c \
 	  ft_strchr.c \
+	  ft_strchr_index.c \
 	  ft_strclr.c \
 	  ft_strcmp.c \
 	  ft_strcpy.c \
@@ -65,6 +68,8 @@ SRC = ft_atoi.c \
 	  ft_strtrim.c \
 	  ft_tolower.c \
 	  ft_toupper.c \
+	  ft_wcharsize.c \
+	  ft_wstrlen.c \
 	  get_next_line.c \
 
 OBJECTS = $(SRC:.c=.o)
